# OmniMind-backend

./: main.py  pyproject.toml
src/: __init__.py
src/agent/: __init__.py  graph.py
src/agent/nodes/: __init__.py  classifier.py  research.py  save.py  vision.py
src/app/: main.py
src/core/: __init__.py  config.py  schemas.py  utils.py
src/services/: __init__.py  llm_service.py  search_service.py  supabase_service.py
